--- a/20240529과제/static/css/papago.css
+++ b/20240529과제/static/css/papago.css
@@ -5,3 +5,137 @@
     box-sizing: border-box;
 }
 
+.header
+{
+    
+    width: 100%;
+    margin: 0 auto;
+    padding: 10px 32px 25px 32px;
+    border: 1px solid #DDDDDD;
+    
+}
+
+.header_inner
+{
+    position: relative;
+}
+.nav_box
+{
+    width: 100%;
+}
+
+.logo_image
+{
+    display: inline-block;
+    width: 35px;
+    height: 33px;
+    position: relative;
+    top: 10px;
+    background: url(../image/logo-image.png) no-repeat center;
+    background-size: cover;
+}
+
+.logo_image:hover
+{
+    cursor: pointer;
+    border-bottom: 5px solid greenyellow;
+}
+h1 
+{
+    display: inline-block;
+    font-size: 25px;
+   
+}
+
+h1:hover
+{
+    cursor: pointer;
+    border-bottom: 5px solid greenyellow;
+}
+
+.nav_box span
+{
+    display: inline-block;
+    font-size: 15px;
+    font-weight: 800;
+    padding: 0 20px;
+}
+
+.nav_box span:hover
+{
+    cursor: pointer;
+    border-bottom: 5px solid greenyellow;
+}
+.gnb_image_box
+{
+    display: inline-block;
+    position: absolute;
+    right: 10px;
+}
+.gnb_wrap_image
+{
+    position: relative;
+    top: 10px;
+    right: 0px;
+    display: inline-block;
+    width: 35px;
+    height: 30px;
+    margin: 0 5px;
+}
+
+.gnb_wrap_image:hover
+{
+    cursor: pointer;
+    border-bottom: 5px solid greenyellow;
+}
+.btn_window_wrap
+{
+    background: url(../image/window.png) no-repeat center;
+    background-size: cover;
+}
+
+.btn_save_wrap
+{
+    background: url(../image/save.png) no-repeat center;
+    background-size: cover;
+}
+
+.btn_setting_wrap
+{
+    background: url(../image/system.png) no-repeat center;
+    background-size: cover;
+}
+
+.gnb_wrap
+{
+    background: url(../image/user.png) no-repeat center;
+    background-size: cover;
+    width: 100px;
+}
+
+.hamburger
+{
+    background: url(../image/hamburger.png) no-repeat center;
+    background-size: cover;
+}
+
+.content
+{
+    width: 1000px;
+    margin: 50px auto 0 auto;
+}
+
+.translate_area
+{
+    width: 100%;
+    height: 500px;
+    border: 2px solid red;
+}
+
+.translate_box
+{
+    width: 40%;
+    height: 500px;
+    border: 2px solid black;
+    float: left;
+}
