--- a/20240529과제/static/css/papago.css
+++ b/20240529과제/static/css/papago.css
@@ -58,7 +58,7 @@ h1:hover
     display: inline-block;
     font-size: 15px;
     font-weight: 800;
-    padding: 0 20px;
+    padding: 0 10px;
 }
 
 .nav_box span:hover
@@ -121,7 +121,7 @@ h1:hover
 
 .content
 {
-    width: 1000px;
+    width: 1300px;
     margin: 50px auto 0 auto;
 }
 
@@ -129,13 +129,132 @@ h1:hover
 {
     width: 100%;
     height: 500px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 .translate_box
 {
-    width: 40%;
+    position: relative;
+    width: 640px;
     height: 500px;
-    border: 2px solid black;
+    border: 2px solid #DDDDDD;
+    border-radius: 10px;
     float: left;
+}
+
+.translate_area .box1
+{
+    margin-right: 10px;
+}
+.translate_area .box2
+{
+    margin-left: 5px;
+}
+
+.lang_select
+{
+    width: 100%;
+    height: 50px;
+    border-bottom: 2px solid #DDDDDD;
+}
+
+.translate_area> .box1> .lang_select> span
+{
+    line-height: 2.5;
+}
+
+.translate_area .box1 .lang_select span:hover
+{
+    cursor: pointer;
+}
+
+.translate_area .box1 .lang_select .lang
+{
+    padding-left: 20px;
+    font-weight: 500;
+}
+
+
+
+.translate_area .box1 .lang_select .sign
+{
+    float: right;
+    padding-right: 20px;
+    font-size: 30px;
+    color: #B5B5B5;
+    position: relative;
+    bottom: 20px;
+}
+
+.source_edit_area
+{
+    position: relative;
+}
+textarea
+{
+    width: 100%;
+    height: 400px;
+    resize: none;
+    position: absolute;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 3;
+    padding: 20px 0 0 20px;
+    border: none;
+}
+
+.textarea:focus
+{
+    outline: none;
+}
+
+.translate_box .btn_toolabr
+{
+    position: absolute;
+    bottom: 0;
+    width: 636px;
+    height: 60px;
+    border-top: 2px solid #DDDDDD;
+}
+
+.translate_area> .box1> .btn_toolabr> .btn_translation_box
+{
+    float: right;
+    width: 150px;
+    height: 100%;
+    background-color: #36E37C;
+    border-bottom-right-radius: 9px;
+
+}
+
+.translate_area> .box1> .btn_toolabr> .btn_translation_box:hover
+{
+    cursor: pointer;
+}
+
+.translate_area .box1 .btn_toolabr .btn_translation
+{
+    
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 2.5;
+    padding: 0 30px;
+    color: #F2FFFF;
+    
+}
+
+.translate_area> .box2> .lang_select> span
+{
+    line-height: 2.5;
+}
+
+.translate_area .box2 .lang_select .lang
+{
+    padding-left: 20px;
+    font-weight: 500;
+}
+
+.translate_area .box2 .lang_select .lang:hover
+{
+    cursor: pointer;
 }
