--- a/20240529/static/css/homwork_papago.css
+++ b/20240529/static/css/homwork_papago.css
@@ -83,5 +83,97 @@
     width: 1400px;
     margin: 0 auto;
     padding: 50px 0;
+    position: relative;
+    border-bottom: 1px solid #ccc;
+
 }
 
+#main_box
+{
+    width: 100%;
+    position: relative;
+}
+
+#main_box .translation
+{
+    width: 685px;
+    position: relative;
+    top: 0;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+#main_box .translation_right
+{
+    position: absolute;
+    right: 0;
+}
+
+#main_box .translation_top
+{
+    padding: 20px 30px;
+    font-weight: 700;
+}
+
+#main_box .translation_middle
+{
+    position: relative;
+    padding: 40px 17px;
+    height: 226px;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+}
+
+#main_box .translation_middle .guide
+{
+    font-size: 29px;
+    color: #777;
+    font-size: 600;
+}
+
+#main_box .translation_middle .count
+{
+    position: absolute;
+    right: 17px;
+    bottom: 40px; 
+    font-size: 20px;
+}
+
+#main_box .translation_bottom
+{
+    width: 100%;
+    position: relative;
+    display: flex;
+}
+
+#main_box .translation_bottom .function
+{
+    /* display: inline-block; */
+    display: flex;
+    width: 75%;
+}
+
+#main_box .translation_bottom .function span
+{
+    /* display: inline-block; */
+    height: 70px;
+    width: 70px;
+    border-right: 1px solid #ccc;
+}
+
+#main_box .translation_bottom .translation_bt
+{
+    /* display: inline-block; */
+    width: 25%;
+}
+
+#main_box .translation_bottom .translation_bt button
+{
+    width: 100%;
+    height: 70px;
+    border: 0;
+    font-size: 23px;
+    background-color: #21dc6d;
+    color: white;
+}
