과제 중간 저장

--- a/20240530과제/static/css/flex과제.css
+++ b/20240530과제/static/css/flex과제.css
@@ -10,13 +10,27 @@
     display: flex;
     flex-wrap: wrap;
     width: 1000px;
+    height: 800px;
     padding: 20px;
-    margin: 0 auto;
+    margin: 10px auto;
     border: 2px solid goldenrod;
 }
 
-#imag_box
+#container #image_box
 {
     width: calc((1000px - 80px) / 3);
+}
+
+img
+{
+    display: block;
+    width: 100%;
+    height: calc((800px - 80px) / 3);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#container #image_box .image
+{
 
 }
